Removed transition from tiles on smaller screens to avoid potential positionning problems when resizing

--- a/style.scss
+++ b/style.scss
@@ -166,7 +166,7 @@ input[type=checkbox] 	{ visibility: hidden; }
         padding: 20px 0;
         background-color: #fff;
         margin: 30px;
-        transition: 0.5s;
+        transition: 0s;
         text-align: center;
         cursor: pointer;
     }
